@@ -4,3 +4,4 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ⮏,2B8F,extras-unicode,symbol-other,anticlockwise triangle-headed top u-shaped arrow,,Guemil Project,2019-01-14,7
 □,25A1,extras-unicode,symbol-other,white square,missing glyph,Benedikt Groß,2019-04-15,1
 🐱‍💻,1F431-200D-1F4BB,extras-unicode,symbol-other,hacker cat,"coder, developer, software, technologist, smart, clever, code, notebook, computer",Benedikt Groß,2020-03-06,?
+🏴󠁵󠁳󠁴󠁸󠁿,1F3F4-E0075-E0073-E0074-E0078-E007F,extras-unicode,subdivision-flag,texas flag,"cowboy, lone star, republic, state",Carlin MacKenzie,2020-04-03,?
