@@ -3445,6 +3445,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E267,extras-openmoji,ui-element,compose,,"write, compose, author",Kai Magnus Müller,2018-04-18,,,,,,
 ,E268,extras-openmoji,ui-element,add contact,,"add, contact",Kai Magnus Müller,2018-04-18,,,,,,
 ,E269,extras-openmoji,ui-element,link,,"link, chain",Kai Magnus Müller,2018-04-18,,,,,,
+🏴󠁵󠁳󠁴󠁸󠁿,1F3F4-E0075-E0073-E0074-E0078-E007F,extras-unicode,subdivision-flag,texas flag,,"cowboy, lone star, republic, state",Carlin MacKenzie,2020-04-03,,,,,?,
 🐱‍💻,1F431-200D-1F4BB,extras-unicode,symbol-other,hacker cat,,"coder, developer, software, technologist, smart, clever, code, notebook, computer",Benedikt Groß,2020-03-06,,,,,?,
 □,25A1,extras-unicode,symbol-other,white square,,missing glyph,Benedikt Groß,2019-04-15,,,,,1,
 ⬌,2B0C,extras-unicode,symbol-other,left right black arrow,,,Guemil Project,2019-01-14,,,,,4,
