@@ -58582,6 +58582,23 @@
     "order": ""
   },
   {
+    "emoji": "🏴󠁵󠁳󠁴󠁸󠁿",
+    "hexcode": "1F3F4-E0075-E0073-E0074-E0078-E007F",
+    "group": "extras-unicode",
+    "subgroups": "subdivision-flag",
+    "annotation": "texas flag",
+    "tags": "",
+    "openmoji_tags": "cowboy, lone star, republic, state",
+    "openmoji_author": "Carlin MacKenzie",
+    "openmoji_date": "2020-04-03",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "?",
+    "order": ""
+  },
+  {
     "emoji": "🐱‍💻",
     "hexcode": "1F431-200D-1F4BB",
     "group": "extras-unicode",
