@@ -8,8 +8,9 @@
 
 New:
   + Emoji 13:
-    1FAA0 plunger
-  + Doe, Saw, Screwdriver, Sewing Needle, Mouse Trap, Placard
+    1FAA0 Plunger, Saw, Screwdriver, Sewing Needle, Mouse Trap, Placard
+  + Doe
+  + Texas Flag
    
 Fix:
   * signs and align Aries, Gemini, Virgo, Scorpio, Capricorn, Libra, Sagittarius, Om, 
